<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/srl_channel_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv_channel_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_thumbnail"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="fitXY"
                app:layout_constraintDimensionRatio="h,3:1.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="1"
                tools:src="@tools:sample/backgrounds/scenic" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_thumbnail"
                tools:text="Cracking The Cryptic" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:autoLink="all"
                android:ellipsize="end"
                android:maxLines="2"
                android:textSize="16sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                tools:text="Vlogs explaining how to solve classic sudokus, variant sudokus, cryptic crosswords and many other puzzles too. Hosted by Mark Goodliffe (12 times winner of The Times Crossword Championship) and Simon Anthony (former record holder for consecutive Listener Crossword solves), daily videos show the tips and tricks needed for solving sudokus and all kinds of puzzles. Each week there will be something for everyone, from beginner through expert. \nBoth Mark and Simon have also represented the UK in the World Puzzle and World Sudoku Championships on numerous occasions and, from time to time, the channel will have vlogs showing how to solve some other puzzle types (eg Japanese pencil puzzles, puzzle hunts etc). \nCheck out our Twitter: @crypticcracking"
                tools:visibility="visible" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_videos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:text="@string/label_videos"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_description" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_subscriber_count_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/label_subscriber_count"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_videos" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_subscriber_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                app:autoSizeMaxTextSize="18sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="@id/tv_subscriber_count_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_subscriber_count_label"
                app:layout_constraintTop_toTopOf="@id/tv_subscriber_count_label"
                tools:text="518,000" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_view_count_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/label_view_count"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_subscriber_count_label" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_view_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                app:autoSizeMaxTextSize="18sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="@id/tv_view_count_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_view_count_label"
                app:layout_constraintTop_toTopOf="@id/tv_view_count_label"
                tools:text="156,374,421" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_video_count_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/label_video_count"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_view_count_label" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_video_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                app:autoSizeMaxTextSize="18sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="@id/tv_video_count_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_video_count_label"
                app:layout_constraintTop_toTopOf="@id/tv_video_count_label"
                tools:text="3,623" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_since_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="16dp"
                android:text="@string/label_since"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_video_count_label"
                app:layout_constraintVertical_bias="0" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_since"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                app:autoSizeMaxTextSize="18sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="@id/tv_since_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_since_label"
                app:layout_constraintTop_toTopOf="@id/tv_since_label"
                tools:text="3,623" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>